--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
+    "mailtrap": "^4.0.0",
     "next": "15.3.0",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
