--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.488.0",
     "mailtrap": "^4.0.0",
     "next": "15.3.0",
